--- a/UskudarDenetim.UI/Views/Shared/_Header.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Header.cshtml
@@ -3,7 +3,7 @@
     <header class="header">
         <div class="container">
             <div id="logo">
-                <a href="/Home/Index" title="Attorney"> <img src="/Images/ud-logo.png" alt="logo" /> </a>
+                <a href="/Home/Index" title="Üsküdar Denetim"> <img src="/Images/ud-logo.png" alt="logo" /> </a>
             </div>
             <div id="menu-container">
                 <nav id="main-menu">
