--- a/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Üsküdar Denetim Yeminli Mali Müşavir</title>
+    <title>Üsküdar Denetim Yeminli Mali Müşavirlik</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link runat="server" rel="icon" href="~/favicon.ico" type="image/x-icon" />
