--- a/UskudarDenetim.UI/Views/TeamMember/_Employees.cshtml
+++ b/UskudarDenetim.UI/Views/TeamMember/_Employees.cshtml
@@ -21,7 +21,7 @@
                             <div class="dt-sc-hr-invisible"></div>
                             <!-- **dt-sc-team - Starts** -->
                             <div class="dt-sc-team type4">
-                                <div class="image" onclick="location.href='@Url.Action("Index","TeamMember")'"><img src="@employee.ImgSrc" alt="@employee.FirstName" /></div>
+                                <div class="image" onclick="location.href='http://213.128.89.156/plesk-site-preview/uskudardenetim.com/TeamMember'"><img src="@employee.ImgSrc" alt="@employee.FirstName" /></div>
                                 <!-- **team-details - Starts** -->
                                 <div class="team-details">
                                     <h6><a href="@Url.Action("Index","TeamMember")" class="capitalize">@employee.FirstName @employee.LastName</a></h6>
@@ -39,7 +39,7 @@
                         <div class="column dt-sc-one-half first">
                             <!-- **dt-sc-team - Starts** -->
                             <div class="dt-sc-team type4">
-                                <div class="image" onclick="location.href='@Url.Action("Index","TeamMember")'"><img src="@employee.ImgSrc" alt="@employee.FirstName" /></div>
+                                <div class="image" onclick="location.href='http://213.128.89.156/plesk-site-preview/uskudardenetim.com/TeamMember'"><img src="@employee.ImgSrc" alt="@employee.FirstName" /></div>
                                 <!-- **team-details - Starts** -->
                                 <div class="team-details">
                                     <h6><a href="@Url.Action("Index","TeamMember")" class="capitalize">@employee.FirstName @employee.LastName</a></h6>
