--- a/UskudarDenetim.UI/Views/PracticalInformations/Detail.cshtml
+++ b/UskudarDenetim.UI/Views/PracticalInformations/Detail.cshtml
@@ -11,24 +11,12 @@
             </div>
         </div>
     </div>
-    <!-- Container starts-->
     <div class="container ">
-        <!-- Primary Starts -->
         <section id="primary" class="content-full-width mt-40">
-            <!-- **Blog-post - Starts** -->
-            <article class="blog-post type3">
-                <!-- **entry-meta - Starts** -->
-                <!-- **entry-detail - Starts** -->
-                <div class="entry-detail">
-                    <div class="entry-title">
-                        <h4><a href="#">@Model.Name</a></h4>
-                    </div>
                     <div class="entry-body">
                         <p> @Html.Raw(Model.Detail)</p>
                     </div>
-                </div> <!-- **entry-detail - Ends** -->
-            </article><!-- **Blog-post - Ends** -->
-        </section> <!-- **Primary - Ends** -->
-    </div> <!-- **container - Ends** -->
+        </section> 
+    </div> 
 </div>
 
