--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -22,7 +22,7 @@
                             <a href="@Url.Action("Employees","TeamMember")">Çalışanlar</a>
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
+                            <a href="@Url.Action("PracticalInformations","PracticalInformations")">Pratik Bilgiler</a>
                         </li>
                         @*<li class="menu-item-simple-parent">
             <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
