--- a/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Footer.cshtml
@@ -37,22 +37,25 @@
                                 </tr>
                                 @if (Model.Currency != null)
                                 {
-                                    <tr>
-                                        <td class="currency"><span>Dolar</span></td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "US DOLLAR").BanknoteBuying</td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "US DOLLAR").BanknoteSelling</td>
-                                    </tr>
+                                <tr>
+                                    <td class="currency"><span>Dolar</span></td>
+                                    <td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "USD").AlphavantageModel.Exchange_Rate.Substring(0,6 )</td>
+                                    <td class="currency">@Model.Currency2.Currency.FirstOrDefault(x => x.CurrencyName == "US DOLLAR").BanknoteSelling</td>
+                                    @*<td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "USD").AlphavantageModel.Exchange_Rate</td>*@
+                                </tr>
 
-                                    <tr>
-                                        <td class="currency"><span>Euro</span></td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "EURO").BanknoteBuying</td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "EURO").BanknoteSelling</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="currency"><span>Pound</span></td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "POUND STERLING").BanknoteBuying</td>
-                                        <td class="currency">@Model.Currency.Currency.FirstOrDefault(x => x.CurrencyName == "POUND STERLING").BanknoteSelling</td>
-                                    </tr>
+                                <tr>
+                                    <td class="currency"><span>Euro</span></td>
+                                    <td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "EUR").AlphavantageModel.Exchange_Rate.Substring(0, 6)</td>
+                                    <td class="currency">@Model.Currency2.Currency.FirstOrDefault(x => x.CurrencyName == "EURO").BanknoteSelling</td>
+                                    @*<td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "EUR").AlphavantageModel.Exchange_Rate</td>*@
+                                </tr>
+                                <tr>
+                                    <td class="currency"><span>Pound</span></td>
+                                    <td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "GBP").AlphavantageModel.Exchange_Rate.Substring(0, 6) </td>
+                                    <td class="currency">@Model.Currency2.Currency.FirstOrDefault(x => x.CurrencyName == "POUND STERLING").BanknoteSelling</td>
+                                    @*<td class="currency">@Model.Currency.FirstOrDefault(x => x.AlphavantageModel.FromCode == "GBP").AlphavantageModel.Exchange_Rate</td>*@
+                                </tr>
                                 }
 
                             </tbody>
