menu sorunu düzeltildi

--- a/UskudarDenetim.UI/Views/Circular/Detail.cshtml
+++ b/UskudarDenetim.UI/Views/Circular/Detail.cshtml
@@ -14,11 +14,20 @@
     </div>
     <div class="container ">
         <section id="primary" class="content-full-width mt-40">
-                    <div class="entry-body">
-                        <p> @Html.Raw(Model.Description)</p>
-                    </div>
-        </section> 
-    </div> 
+            <div class="entry-body">
+                <p> @Html.Raw(Model.Description)</p>
+            </div>
+        </section>
+    </div>
 </div>
 
 
+
+@section scripts{
+
+
+    <script type="text/javascript">
+
+    </script>
+
+}
