--- a/UskudarDenetim.UI/Views/Service/Detail.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Detail.cshtml
@@ -21,8 +21,17 @@
                     </div>
                 </div>
             </article>
-        </section> 
-    </div> 
+        </section>
+    </div>
 </div>
 
 
+
+@section scripts{
+
+
+    <script type="text/javascript">
+
+    </script>
+
+}
