--- a/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
@@ -15,7 +15,7 @@
                 <a href="@Url.Action("Index","Service")" class="dt-sc-button2">Hizmetlerimiz</a>
             </div>
             <div class="ls-l div-bg-color-1st " style="top:350px;left:115px;z-index:3;white-space: nowrap;" data-ls="offsetxin:150;offsetyin:50;durationin:2500;delayin:200;">
-                <a href="@Url.Action("Index","PracticalInformations")" class="dt-sc-button2">Faydalı Bilgiler</a>
+                <a href="@Url.Action("Index","PracticalInformations")" class="dt-sc-button2">Pratik Bilgiler</a>
             </div>
             <div class="ls-l div-bg-color-1st " style="top:430px;left:115px;z-index:3;white-space: nowrap;" data-ls="offsetxin:0;offsetyin:100;durationin:2500;delayin:600;">
                 <a href="@Url.Action("Index","Circular")" class="dt-sc-button2">Sirküler</a>
