--- a/UskudarDenetim.UI/Views/Home/About.cshtml
+++ b/UskudarDenetim.UI/Views/Home/About.cshtml
@@ -22,13 +22,13 @@
             <div class="dt-sc-margin25"></div>
             <blockquote class="type1"> <q>@Model.Quota</q> </blockquote>
             <div class="dt-sc-margin25"></div>
-       
+
         </div> <!-- **column - Ends** -->
         <!-- **column - Starts** -->
         <div class="column dt-sc-two-fifth">
             <!-- **recent-gallery-container - Starts** -->
-         
-        <div class="recent-gallery-container">
+
+            <div class="recent-gallery-container">
                 <!-- **recent-gallery - Starts** -->
                 <ul class="recent-gallery">
                     <li> <img src="~/Images/CompanyGallery/gallery1.png" alt="image" /> </li>
@@ -50,3 +50,12 @@
     </div> <!-- **container - Ends** -->
     <div class="dt-sc-margin50"></div>
 </div><!-- **Full-width-section - Ends** -->
+
+@section scripts{
+
+    
+    <script type="text/javascript">
+    
+    </script>
+
+}
